Changelog
=========

1.2 (unreleased)
----------------

- Nothing changed yet.


1.1 (2010-10-18)
----------------

- Explicitly load the zcml of the archetypes.schemaextender package so
  you do not need to add this yourself to your buildout config on
  Plone 3.2 or earlier.
  [maurits]


1.0 (2010-10-18)
----------------

- Initial release.  [maurits]