@@ -3,6 +3,8 @@ extensions = buildout-versions
 extends = http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
 package-name = zest.social
 
+[instance]
+eggs += plone.reload
 
 [versions]
 buildout-versions = 1.2
