@@ -1,0 +1,5 @@
+# Default value for show_social_viewlet field:
+SHOW_VIEWLET_DEFAULT = False
+
+# Fallback for when the field does not exist for the current object:
+SHOW_VIEWLET_FALLBACK = False
